- Fully finished the planked wall functionality with proper rotation, models, and texture.

--- a/src/main/resources/assets/cozyhome/lang/en_us.json
+++ b/src/main/resources/assets/cozyhome/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "block.cozyhome.oak_planked_wall": "Oak Planked Wall",
+  "block.cozyhome.spruce_planked_wall": "Spruce Planked Wall",
 
   "tooltip.cozyhome.block.planked_wall": "§7Stackable",
 
