--- a/src/main/resources/assets/cozyhome/lang/en_us.json
+++ b/src/main/resources/assets/cozyhome/lang/en_us.json
@@ -13,6 +13,9 @@
   "block.cozyhome.crimson_planked_wall": "Crimson Planked Wall",
   "block.cozyhome.warped_planked_wall": "Warped Planked Wall",
 
+  "block.cozyhome.autumn_stained_window": "Autumn Stained Window",
+  "block.cozyhome.autumn_stained_window_pane": "Autumn Stained Window Pane",
+
   "block.cozyhome.white_lamp": "White Lamp",
   "block.cozyhome.orange_lamp": "Orange Lamp",
   "block.cozyhome.magenta_lamp": "Magenta Lamp",
