Added Wall Mirror (Only Oak)

--- a/src/main/resources/assets/cozyhome/lang/en_us.json
+++ b/src/main/resources/assets/cozyhome/lang/en_us.json
@@ -79,6 +79,8 @@
   "block.cozyhome.crimson_chair": "Crimson Chair",
   "block.cozyhome.warped_chair": "Warped Chair",
 
+  "block.cozyhome.oak_wall_mirror": "Oak Wall Mirror",
+
   "tooltip.cozyhome.block.planked_wall": "§7Stackable",
 
   "sounds.cozyhome.lamp_toggle": "Lamp Toggled",
