Made Lamps have proper tooltips telling whether the block is dyeable or dyed.
Made lamp render correct color in inventory

Trying to make lamp drop proper color still.

--- a/src/main/resources/assets/cozyhome/lang/en_us.json
+++ b/src/main/resources/assets/cozyhome/lang/en_us.json
@@ -110,6 +110,7 @@
   "block.cozyhome.crimson_wall_mirror": "Warped Wall Mirror",
 
   "tooltip.cozyhome.block.planked_wall": "§7Stackable",
+  "tooltip.cozyhome.block.dyed": "Dyed",
   "tooltip.cozyhome.block.dyeable": "§7Dyeable",
 
   "sounds.cozyhome.lamp_toggle": "Lamp Toggled",
