--- a/src/main/resources/assets/cozyhome/lang/en_us.json
+++ b/src/main/resources/assets/cozyhome/lang/en_us.json
@@ -113,8 +113,8 @@
   "block.cozyhome.warped_beam": "Crimson Beam",
   "block.cozyhome.crimson_beam": "Warped Beam",
 
-  "block.cozyhome.stone_bricks_bird_bath": "Stone Brick Bird Bath",
-  "block.cozyhome.tuff_bird_bath": "Tuff Bird Bath",
+  "block.cozyhome.stone_bricks_fountain": "Stone Brick Fountain",
+  "block.cozyhome.tuff_fountain": "Tuff Fountain",
 
   "container.cozyhome.storage_counter": "Storage Counter",
 
