Fixed Lang for fountain sprouts

--- a/src/main/resources/assets/cozyhome/lang/en_us.json
+++ b/src/main/resources/assets/cozyhome/lang/en_us.json
@@ -219,6 +219,24 @@
   "block.cozyhome.endstone_fountain": "Endstone Fountain",
   "block.cozyhome.purpur_fountain": "Purpur Fountain",
 
+  "block.cozyhome.stone_brick_fountain_sprout": "Stone Brick Fountain Sprout",
+  "block.cozyhome.mossy_stone_brick_fountain_sprout": "Mossy Stone Brick Fountain Sprout",
+  "block.cozyhome.granite_fountain_sprout": "Granite Fountain Sprout",
+  "block.cozyhome.diorite_fountain_sprout": "Diorite Fountain Sprout",
+  "block.cozyhome.andesite_fountain_sprout": "Andesite Fountain Sprout",
+  "block.cozyhome.deepslate_fountain_sprout": "Deepslate Fountain Sprout",
+  "block.cozyhome.tuff_fountain_sprout": "Tuff Fountain Sprout",
+  "block.cozyhome.brick_fountain_sprout": "Brick Fountain Sprout",
+  "block.cozyhome.mud_fountain_sprout": "Mud Fountain Sprout",
+  "block.cozyhome.sandstone_fountain_sprout": "Sandstone Fountain Sprout",
+  "block.cozyhome.red_sandstone_fountain_sprout": "Red Sandstone Fountain Sprout",
+  "block.cozyhome.prismarine_fountain_sprout": "Prismarine Fountain Sprout",
+  "block.cozyhome.nether_brick_fountain_sprout": "Nether Brick Fountain Sprout",
+  "block.cozyhome.red_nether_brick_fountain_sprout": "Red Nether Brick Fountain Sprout",
+  "block.cozyhome.blackstone_fountain_sprout": "Blackstone Fountain Sprout",
+  "block.cozyhome.endstone_fountain_sprout": "Endstone Fountain Sprout",
+  "block.cozyhome.purpur_fountain_sprout": "Purpur Fountain Sprout",
+
   "block.cozyhome.oak_tool_rack": "Oak Tool Rack",
   "block.cozyhome.spruce_tool_rack": "Spruce Tool Rack",
   "block.cozyhome.birch_tool_rack": "Birch Tool Rack",
