- Fixed the chair tucking bug that crashed the game. - Added a new tag called CAN_TUCK_UNDER which determines which blocks can the tuckable blocks tuck into! - Added proper tuckable logic to the chair block. - Fixed Ominous lamp drop not being stackable

--- a/src/main/resources/assets/cozyhome/lang/en_us.json
+++ b/src/main/resources/assets/cozyhome/lang/en_us.json
@@ -281,7 +281,7 @@
 
   "message.cozyhome.remove_with_shear": "Can Remove With Shears",
   "message.cozyhome.same_color": "Same Color",
-  "message.cozyhome.light_with_flint_and_steel": "Light with Flint and Steel",
+  "message.cozyhome.needs_water": "Needs Water",
   "message.cozyhome.telescope.cant_use": "Ouch my eyes! I should wait til night to use this.",
 
   "message.cozyhome.telescope.moon_fact_0": "Interesting... The moon completes it's cycles every 8 nights.",
