- Close to finishing the sink

--- a/src/main/resources/assets/cozyhome/lang/en_us.json
+++ b/src/main/resources/assets/cozyhome/lang/en_us.json
@@ -176,6 +176,8 @@
   "block.cozyhome.crimson_wall_mirror": "Crimson Wall Mirror",
   "block.cozyhome.warped_wall_mirror": "Warped Wall Mirror",
 
+  "block.cozyhome.iron_sink": "Iron Sink",
+
   "block.cozyhome.oak_large_stump": "Oak Large Stump",
   "block.cozyhome.spruce_large_stump": "Spruce Large Stump",
   "block.cozyhome.birch_large_stump": "Birch Large Stump",
