- Added some tooltips to certain blocks. Done

--- a/src/main/resources/assets/cozyhome/lang/en_us.json
+++ b/src/main/resources/assets/cozyhome/lang/en_us.json
@@ -259,20 +259,23 @@
   "container.cozyhome.drawer": "Drawer",
 
   "tooltip.cozyhome.interact_with_hand": "Interact with Hand:",
+  "tooltip.cozyhome.interact_with_hand_while_sneaking": "Interact with Hand While Sneaking:",
+  "tooltip.cozyhome.interact_with_hand_at_night": "Interact with Hand At Night:",
+  "tooltip.cozyhome.interact_with_dye": "Interact with Dye:",
   "tooltip.cozyhome.interact_with_cushion": "Interact with Cushion:",
+  "tooltip.cozyhome.sets_block_color": "Sets Block Color",
+  "tooltip.cozyhome.toggle_light": "Toggle Light",
   "tooltip.cozyhome.adds_cushion": "Adds a Styled Cushion to the Block",
-
+  "tooltip.cozyhome.tells_time": "Tells Time",
   "tooltip.cozyhome.on_interacted_with_dyeable_block": "Interacted With Dyeable Block:",
-  "tooltip.cozyhome.block.storage_counter": "Holds 24 stacks",
-  "tooltip.cozyhome.block.sink_counter": "Pulls Water From:",
-  "tooltip.cozyhome.block.telescope": "Can be used to learn interesting facts about the lunar cycles at night",
+  "tooltip.cozyhome.pulls_water_from": "Pulls Water From:",
+  "tooltip.cozyhome.lunar_tips": "Learn interesting facts about the lunar cycles",
   "tooltip.cozyhome.can_tuck_into_certain_blocks": "Can Tuck into certain Blocks",
-  "tooltip.cozyhome.can_add": "§7Can Add:",
-  "tooltip.cozyhome.on_interact": "Interacted With:",
-  "tooltip.cozyhome.sneaking_on_interact": "Sneaking + Interacted With",
   "tooltip.cozyhome.dyeable": "§7Dyeable",
-  "tooltip.cozyhome.dyed": "Dyed",
   "tooltip.cozyhome.applied_when_interacted_with": "Applied When Interacted With:",
+
+  "tooltip.cozyhome.below": "Below",
+  "tooltip.cozyhome.behind": "Behind",
 
   "sounds.cozyhome.lamp_toggle": "Lamp Toggled",
   "sounds.cozyhome.fireplace_loop": "Fireplace Crackles",
